fix the alignment of the 'follow this instructor & contact this instructor' buttons on lesson show

--- a/public/stylesheets/firehoze.less
+++ b/public/stylesheets/firehoze.less
@@ -2147,6 +2147,8 @@ div#tab-lesson-instructor div#bio {
   min-height:6em;
 }
 
+div#tab-lesson-instructor div#contact-and-follow { margin:0 0 1em 0; }
+
 div#lessons-by-instructor {
   margin: 0 17px 0 0;
   padding:17px 0;
